additions, bugfix wrong measurement format

--- a/.env.example
+++ b/.env.example
@@ -76,4 +76,9 @@ QUICKBOOKS_CLIENT_SECRET=Kux3xxxxxxxxxxxxxxxxxxxxxxxxxxxxj58mqYCD
 FORCASEIO_API=abc
 PURPLE_ID=12345
 
+WEATHER_LAT=
+WEATHER_LON=
+
 SYNC_SECRET_HASH=
+
+
