--- a/.env.example
+++ b/.env.example
@@ -76,8 +76,8 @@ QUICKBOOKS_CLIENT_SECRET=Kux3xxxxxxxxxxxxxxxxxxxxxxxxxxxxj58mqYCD
 FORCASEIO_API=abc
 PURPLE_ID=12345
 
-WEATHER_LAT=
-WEATHER_LON=
+LOCATION_LAT=
+LOCATION_LON=
 
 SYNC_SECRET_HASH=
 
