various edits, added historical data

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ MONGODB_URI=mongodb://localhost:27017/airshits
 
 SESSION_SECRET=lol
 
-FORCASEIO_API=
+FORCASTIO_API=
 
 LOCATION_LAT=41.619829
 LOCATION_LON=-87.245317
