--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ladjs/bootstrap-social": "^7.0.2",
     "@octokit/rest": "^16.32.0",
     "aqi-bot": "^1.1.4",
+    "async": "^3.1.0",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
@@ -40,6 +41,7 @@
     "express-session": "^1.16.2",
     "express-status-monitor": "^1.2.7",
     "fbgraph": "^1.4.4",
+    "geolocation-utils": "^1.2.2",
     "googleapis": "^43.0.0",
     "instagram-node": "^0.5.8",
     "jquery": "^3.4.1",
@@ -70,7 +72,6 @@
     "passport-snapchat": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "paypal-rest-sdk": "^1.8.1",
-    "point-in-polygon": "^1.0.1",
     "popper.js": "^1.15.0",
     "pug": "^2.0.4",
     "request": "^2.88.0",
