--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "fbgraph": "^1.4.4",
     "geolocation-utils": "^1.2.2",
     "googleapis": "^43.0.0",
+    "inputmask": "^4.0.9",
     "instagram-node": "^0.5.8",
     "jquery": "^3.4.1",
     "lastfm": "^0.9.3",
