feature: migrations & flight tracking

--- a/.env.example
+++ b/.env.example
@@ -3,14 +3,17 @@ MONGODB_URI=mongodb://localhost:27017/airshits
 
 SESSION_SECRET=lol
 
-FORCASTIO_API=
+FORCASTIO_API_KEY=
 
 LOCATION_LAT=41.619829
 LOCATION_LON=-87.245317
 
-PURPLE_ID=
+PURPLE_AIR_ID=
 
-MAPQUESTAPI_KEY=
-MAPQUESTAPI_SECRET=
+MAPQUEST_API_KEY=
+MAPQUEST_API_SECRET=
 
 SYNC_SECRET_HASH=
+
+AVIATION_EDGE_API_KEY=
+NEARBY_AIRPORTS_IATAS=
