--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-import": "^2.18.2",
+    "migrate-mongoose": "^4.0.0",
     "mocha": "^6.2.1",
     "nyc": "^14.1.1",
     "sinon": "^7.5.0",
