--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "postinstall": "npm rebuild node-sass",
-    "start": "node app.js",
+    "start": "./node_modules/nodemon/bin/nodemon.js app.js",
     "test": "nyc mocha --timeout=10000 --exit",
     "lint": "eslint \"**/*.js\""
   },
@@ -33,7 +33,9 @@
     "cheerio": "^1.0.0-rc.3",
     "clockwork": "^0.1.4",
     "compression": "^1.7.4",
+    "connect-history-api-fallback": "^1.6.0",
     "connect-mongo": "^3.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
@@ -61,6 +63,7 @@
     "node-sass": "^4.12.0",
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^6.3.0",
+    "nodemon": "^1.19.4",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-github": "^1.1.0",
