--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "bootstrap-social": "^5.1.1",
     "core-js": "^3.3.2",
     "jquery": "^3.4.1",
+    "leaflet-rotatedmarker": "^0.2.0",
     "moment": "^2.24.0",
     "popper.js": "^1.16.0",
     "vue": "^2.6.10",
