--- a/api/package.json
+++ b/api/package.json
@@ -41,6 +41,7 @@
     "express": "^4.17.1",
     "express-flash": "^0.0.2",
     "express-handlebars": "^3.1.0",
+    "express-redis-cache": "^1.1.3",
     "express-session": "^1.16.2",
     "express-status-monitor": "^1.2.7",
     "fbgraph": "^1.4.4",
