--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "bootstrap-social": "^5.1.1",
     "core-js": "^3.3.2",
     "jquery": "^3.4.1",
+    "leaflet": "^1.6.0",
     "leaflet-rotatedmarker": "^0.2.0",
     "moment": "^2.24.0",
     "popper.js": "^1.16.0",
+    "timeline-vuejs": "^1.0.11",
     "vue": "^2.6.10",
     "vue-meta": "^2.3.1",
     "vue-router": "^3.1.3",
@@ -30,6 +32,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "fibers": "^4.0.2",
+    "file-loader": "^5.0.2",
     "node-sass": "^4.13.0",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
