--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.19.3",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-social": "^5.1.1",
@@ -19,6 +20,7 @@
     "popper.js": "^1.16.0",
     "timeline-vuejs": "^1.0.11",
     "vue": "^2.6.10",
+    "vue-apexcharts": "^1.5.3",
     "vue-meta": "^2.3.1",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
