--- a/api/package.json
+++ b/api/package.json
@@ -81,6 +81,7 @@
     "popper.js": "^1.15.0",
     "pug": "^2.0.4",
     "request": "^2.88.0",
+    "serve-index": "^1.9.1",
     "stripe": "^7.9.1",
     "tumblr.js": "^2.0.2",
     "twilio": "^3.35.1",
