--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueform/slider": "^1.0.5",
     "apexcharts": "^3.19.3",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-social": "^5.1.1",
     "core-js": "^3.3.2",
+    "geolocation-utils": "^1.2.5",
     "jquery": "^3.4.1",
     "leaflet": "^1.6.0",
     "leaflet-rotatedmarker": "^0.2.0",
@@ -31,6 +33,7 @@
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
+    "@vue/composition-api": "^1.0.0-rc.12",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
