--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "vue-apexcharts": "^1.5.3",
     "vue-meta": "^2.3.1",
     "vue-router": "^3.1.3",
+    "vue-trend-chart": "^0.15.3",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
