--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "@vue/cli-service": "^4.0.0",
     "@vue/composition-api": "^1.0.0-rc.12",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "fibers": "^4.0.2",
